--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,12 +5,12 @@
 
 @import "icons";
 
-$fontFamily: "";
+$fontFamily: "SF UI Display";
 $fontSize: 16;
 
 $minWidth: 320px;
-$maxWidth: 1920;
-$maxWidthContainer: 1170;
+$maxWidth: 800;
+$maxWidthContainer: 800;
 $md1: $maxWidthContainer + 12;
 $md2: 991.98;
 $md3: 767.98;
@@ -19,6 +19,7 @@ $md4: 479.98;
 $mainColor: #000;
 
 @import "null-style";
+
 body {
     color: $mainColor;
     &._lock {
@@ -54,3 +55,6 @@ body {
 .page {
     flex: 1 1 auto;
 }
+
+@import "ui";
+@import "main-page";
