--- a/client/src/scss/main-page.scss
+++ b/client/src/scss/main-page.scss
@@ -5,7 +5,7 @@
         flex-direction: column;
         align-items: center;
         text-align: center;
-        color: #333333;
+        // color: #333333;
     }
     // .main__logo
     &__logo {
